--- a/Source/htmls/Function_Definition.html
+++ b/Source/htmls/Function_Definition.html
@@ -40,7 +40,7 @@
               src="../images/Octopus-Green.png"
               alt=""
             />
-            <h6 class="user-name">OmriG</h6>
+            <h6 class="user-name">TheDude</h6>
           </a>
             <a class="navbar-brand" id="window-title" href="">Function Definition Window</a>
           <button
